--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.5",
+    "@types/node": "^20.8.5",
+    "@types/react": "^18.2.28",
+    "@types/react-dom": "^18.2.13",
     "biuty": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -17,6 +21,7 @@
     "redux-thunk": "^2.4.2",
     "reselect": "^4.1.8",
     "sass": "^1.68.0",
+    "typescript": "^5.2.2",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
